--- a/ASGE_HOD_DESk.html
+++ b/ASGE_HOD_DESk.html
@@ -128,15 +128,15 @@
                 <section class="table">
                     <ul>
                         <a href="ASGE_HOD_DESk.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">HOD's Desk</a>
-                        <a href="ASGE_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & staff</a>
-                        <a href="ASGE_Roll.html" class="fetchLink" data-elementid="student_roll">Student roll</a>
+                        <a href="ASGE_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
+                        <a href="ASGE_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll</a>
                         <a href="ASGE_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
-                        <a href="ASGE_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam schedule</a>
+                        <a href="ASGE_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                         <a href="ASGE_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                         <a href="ASGE_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                         <a href="ASGE_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
                         <a href="ASGE_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                        <a href="ASGE_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
+                        <a href="ASGE_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                         <a href="ASGE_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
                         <a href="ASGE_INDUSTRY.html" class="fetchLink" data-elementid="industrial_visit">Industry institute interaction</a>
                         <a href="ASGE_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
