--- a/COMP_AAC.html
+++ b/COMP_AAC.html
@@ -122,7 +122,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Aug-22</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FAAC%202022-23.pdf?alt=media&token=cdfb711c-7a08-4a05-a728-7fbeffb25e65">Aug-22</a>
                             </div>
                         </div>
 
@@ -130,7 +130,7 @@
                             <p class="aac_left">2021-22</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Aug-21</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FAAC%202021-22.pdf?alt=media&token=176d1775-ccc1-44e9-9b55-a9cf087166b2">Aug-21</a>
                             </div>
                         </div>
 
@@ -138,7 +138,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Dec-20</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FAAC%202020-21.pdf?alt=media&token=0ac30c7b-4668-4864-a61d-bcfcabab85ee">Dec-20</a>
                             </div>
                         </div>
 
@@ -146,7 +146,7 @@
                             <p class="aac_left">2018-19</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Jan-19</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FMinutes%20of%20%20AAC%20Meeting%20%202018-2019.pdf?alt=media&token=5909cf45-8de4-439f-b4a8-4f06fb979ccc">Jan-19</a>
                             </div>
                         </div>
 
@@ -154,7 +154,7 @@
                             <p class="aac_left">2017-18</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Mar-18</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FMinutes%20of%20AACMeeting-2017-18.pdf?alt=media&token=31d02e10-50bb-41bd-ab80-f809ac7e6b37">Mar-18</a>
                             </div>
                         </div>
 
@@ -162,7 +162,7 @@
                             <p class="aac_left">2016-17</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Jan-17</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FMinutes%20of%20AAC%20meeting%2016-17.pdf?alt=media&token=24419fd5-a65f-44ef-8085-f172509e3729">Jan-17</a>
                             </div>
                         </div>
 
@@ -170,7 +170,7 @@
                             <p class="aac_left">2015-16</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Jul-15</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FMinutes%20of%20AAC%20Meeting-2015.pdf?alt=media&token=467fb12c-7500-4006-b7d8-3d82276bd2fd">Jul-15</a>
                             </div>
                         </div>
 
@@ -178,7 +178,7 @@
                             <p class="aac_left">2014-15</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Dec-14</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FMinutes%20of%20AAC%20Meeting-2014.pdf?alt=media&token=a94b3ef0-7d86-4e69-8f2a-d8c37da92174">Dec-14</a>
                             </div>
                         </div>
 
@@ -193,7 +193,7 @@
                             <p class="aac_left">2023-24</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">09 Nov 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_9%20Nov%202023.pdf?alt=media&token=96ef7a9f-15cc-4710-8675-264381b8a32e">09 Nov 2023</a>
                             </div>
                         </div>
 
@@ -201,7 +201,7 @@
                             <p class="aac_left">2023-24</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">08 Aug 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_8%20Aug%202023.pdf?alt=media&token=e917d035-c0f3-47c0-8de6-dd316ce9bbff">08 Aug 2023</a>
                             </div>
                         </div>
 
@@ -209,7 +209,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">08 Feb 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_8%20Feb%202023.pdf?alt=media&token=bc057020-0ca4-490d-a20f-e221d07f93d7">08 Feb 2023</a>
                             </div>
                         </div>
 
@@ -217,7 +217,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">10 Oct 2022</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_10%20Oct%202022.pdf?alt=media&token=f3c2925b-f61a-4a8d-8ef9-8ffdcfcc2e53">10 Oct 2022</a>
                             </div>
                         </div>
 
@@ -225,7 +225,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">22 July 2022</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_22%20July%202022.pdf?alt=media&token=a0b71348-b57a-4eaf-9f4a-6e603ad32fe3">22 July 2022</a>
                             </div>
                         </div>
 
@@ -233,15 +233,7 @@
                             <p class="aac_left">2021-22</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">29 Mar 2022</a>
-                            </div>
-                        </div>
-
-                        <div class="aac_down2">
-                            <p class="aac_left">2020-21</p>
-                            <div class="aac_right">
-                                <img src="vector 2.png" alt="">
-                                <a href="#">13 Jan 2021</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-AAC%2FDM_29%20Mar%202022.pdf?alt=media&token=86c0364d-9baf-446b-8f59-bd127ae20de8">29 Mar 2022</a>
                             </div>
                         </div>
                 
