--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -136,6 +136,7 @@
                     <a href="COMP_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="COMP_ACTIVITIES.html" class="fetchLink" data-elementid="RandD">Activities</a>
                     <a href="COMP_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
+                    <a href="COMP_ACHIEVEMENT.html" class="fetchLink" data-elementid="timetable">Achievements/ Messages</a>
                     <a href="COMP_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                     <a href="COMP_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
                     <a href="COMP_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
