--- a/COMP_MAGZINE.html
+++ b/COMP_MAGZINE.html
@@ -111,7 +111,7 @@
             </section>
             <div id="timetable">
                 <h1>E-Magazine</h1>
-                <div class="exam_links1">
+                <!-- <div class="exam_links1">
                     <div class="exam_links_one" id="okk">
                         <img src="vector 2.png" alt="" id="okk2">
                         <a href="https://www.aitpune.com/Documents/ASGE/Timetable/FE%20time%20table%20SEM%20I%202023-24.pdf" class="prior" id="link_exam" target="_blank">Sem-1 2023-24</a>
@@ -141,7 +141,7 @@
                         <a href="https://www.aitpune.com/Documents/ASGE/Timetable/FE%20time%20table%20SEM%20I%202023-24.pdf" class="prior" id="link_exam" target="_blank">Sem-1 2020-21</a>
                     </div>
                     
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
