--- a/COMP_RESULT.html
+++ b/COMP_RESULT.html
@@ -113,6 +113,16 @@
 
             <div id="result_asge">
                 <h2 class="result_asge_re" style="margin-bottom: 30px;">Result</h2>
+
+                <h3 class="result_of_se">Result Analysis</h3>
+                <div class="result_analysis">
+                    <div class="result_img">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fimage_2024-02-04_19-52-46.png?alt=media&token=ac658ec4-c649-4962-bb6a-4a4a011826ce" alt="">
+                    </div>
+                    <div class="result_img">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fimage_2024-02-04_19-57-27.png?alt=media&token=cf5ce5c9-7f98-456a-94f2-deace43dd8a3" alt="">
+                    </div>
+                </div>
                 
                 <h3 class="result_of_se">SE Computer 2022-23</h3>
                 <div class="rollno" id="secompa">
