--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -137,6 +137,7 @@
                     <a href="ENTC_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                     <a href="ENTC_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
                     <a href="ENTC_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
+                    <a href="ENTC_ACHIEVENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
                     <a href="ENTC_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
                     <a href="ENTC_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
                     <a href="ENTC_INDUSTRY.html" class="fetchLink" data-elementid="industry_in">Industry institute interaction</a>
