--- a/ENTC_PLACEMENT.html
+++ b/ENTC_PLACEMENT.html
@@ -112,6 +112,16 @@
             <div id="timetable">
                 <h1>Placements</h1>
                 <div class="tab1">
+
+                    <h3 class="result_of_se">Placement Analysis</h3>
+                    <div class="result_analysis" style="margin-bottom: 2rem;">
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FPLACEMENT-GRAPH%2Fimage_2024-02-05_02-35-32.png?alt=media&token=1576cf9d-2556-4f71-b441-64a86454d739" alt="">
+                        </div>
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FPLACEMENT-GRAPH%2Fimage_2024-02-05_02-39-59.png?alt=media&token=922565d4-64ea-4804-8126-3313358d4f54" alt="">
+                        </div>
+                    </div>
                     <div class="headr">
                         <div class="row1" id="toc">Time Of <br>Completion</div>
                         <div class="row1">Student <br>Registered</div>
