--- a/ENTC_PROJECT.html
+++ b/ENTC_PROJECT.html
@@ -116,7 +116,7 @@
                 </h1>
                 <p style="margin-top: 30px; margin-bottom: 20px;" class="project_para">Projects Of Electronic and Telecommunication Department Students.</p>
 
-                <div class="project_lists" style="margin-top: 20px;">
+                <!-- <div class="project_lists" style="margin-top: 20px;">
                     <div class="project_img_topic">
                         <div class="project_img">
                             <img src="Rectangle 61.png">
@@ -223,7 +223,7 @@
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-PROJECTS%2FBE%20PROJECT%20LIST%202021-22.pdf?alt=media&token=03069cd5-0987-4282-804b-809ed13234d5" target="_blank">Read More</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                <div class="phead">
                 <h1 style="margin-top: 2rem; font-size: 1.5rem; color: #4C6BF1;">
