--- a/ENTC_RESULT.html
+++ b/ENTC_RESULT.html
@@ -113,7 +113,15 @@
 
             <div id="result_asge">
                 <h2 class="result_asge_re" style="margin-bottom: 30px;">Result</h2>
-                
+                <h3 class="result_of_se">Result Analysis</h3>
+                    <div class="result_analysis">
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fimage_2024-02-04_20-14-18.png?alt=media&token=9eac111b-f1e2-46c9-be13-fafb7eeb73a5" alt="">
+                        </div>
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fimage%20(4).png?alt=media&token=7533afd5-2029-4035-857d-2e9300410b7f" alt="">
+                        </div>
+                    </div>
                 <h3 class="result_of_se">SE Electronic & Telecommunication 2022-23</h3>
                 <div class="rollno" id="secompa">
                     <div class="result_final">
