--- a/IT_ACTIVITIES.html
+++ b/IT_ACTIVITIES.html
@@ -121,7 +121,7 @@
                                  <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem; margin-top: 0.1rem;">
                             </div>
                              <div>
-                                 <a href="#">Report</a>
+                                 <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FAdditional%2FReport%20%20NCCCIL-21.pdf?alt=media&token=56cfe1f7-ef17-4a4e-abee-6eda1bdff742">Report</a>
                              </div>
                          </div>
                          <div class="special_u" style="margin-top: 0.8rem;">
@@ -129,7 +129,7 @@
                                  <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem; margin-top: 0.1rem;">
                             </div>
                              <div>
-                                 <a href="#">Media Coverage</a>
+                                 <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FAdditional%2FReport%20%20NCCCIL-21%20Media%20Coverage.pdf?alt=media&token=21a5d7ad-65d1-492c-8cdf-dd417c84b5ef">Media Coverage</a>
                              </div>
                          </div>
                     </div>
@@ -140,7 +140,7 @@
                                  <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem; margin-top: 0.1rem;">
                             </div>
                              <div>
-                                 <a href="#">FDP Organised by Department with report (2015-16 to 2022-23) :</a>
+                                 <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-ACTIVITIES%2FAdditional%2FFDP%20Organized%20-%205%20Years.pdf?alt=media&token=b2952468-8df6-4a88-805a-8bad52641e12">FDP Organised by Department with report (2015-16 to 2022-23) :</a>
                              </div>
                          </div>
                     </div>
