--- a/IT_DEPARTMENT.html
+++ b/IT_DEPARTMENT.html
@@ -132,18 +132,19 @@
                     <a href="IT_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
                     <a href="IT_Roll.html" class="fetchLink" data-elementid="student_roll">Student roll & Counselor</a>
                     <a href="IT_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
-                    <a href="IT_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam schedule</a>
+                    <a href="IT_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="IT_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="IT_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                     <a href="IT_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
                     <a href="IT_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
                     <a href="IT_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                    <a href="IT_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
+                    <a href="IT_ACHIEVEMENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
+                    <a href="IT_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                     <a href="IT_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
-                    <a href="IT_INDUSTRY.html" class="fetchLink" data-elementid="RandD">Industry institute interaction</a>
+                    <a href="IT_INDUSTRY.html" class="fetchLink" data-elementid="RandD" style="font-size: 0.98rem;">Industry Institute Interaction</a>
                     <a href="IT_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
                     <a href="IT_AAC.html" class="fetchLink" data-elementid="timetable">AAC & Dept Meeting</a>
-                    <a href="IT_PLACEMENT.html" class="fetchLink" data-elementid="timetable">Placement record</a>
+                    <a href="IT_PLACEMENT.html" class="fetchLink" data-elementid="timetable">Placement Record</a>
                     <a href="IT_MAGZINE.html" class="fetchLink" data-elementid="timetable">E-Magazine</a>
                 </ul>
             </section>
