--- a/IT_PROJECT.html
+++ b/IT_PROJECT.html
@@ -116,7 +116,7 @@
                 </h1>
                 <p style="margin-top: 30px; margin-bottom: 20px;" class="project_para">Projects of IT Department Students.</p>
 
-                <div class="project_lists" style="margin-top: 0px;">
+                <!-- <div class="project_lists" style="margin-top: 0px;">
                     <div class="project_img_topic">
                         <div class="project_img">
                             <img src="Rectangle 61.png">
@@ -226,7 +226,7 @@
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FAIT-PROJECTS%2FProject%20BE%20IT%202022-23.pdf?alt=media&token=e36dbc7e-542d-4272-9d28-05caab0ba745" target="_blank">Read More</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div id="RandD">
                     <h1>
