--- a/IT_RESULT.html
+++ b/IT_RESULT.html
@@ -113,8 +113,29 @@
 
             <div id="result_asge">
                 <h2 class="result_asge_re" style="margin-bottom: 30px;">Result</h2>
-                <h3 class="result_of_se">SE Information Technology 2022-23</h3>
                 <div class="rollno" id="secompa">
+
+                    <div class="project_more">
+                        <div class="special_u" style="margin-top: 0.8rem;">
+                            <div class="su_img">
+                                 <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem; margin-top: 0.1rem;">
+                            </div>
+                             <div>
+                                 <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2FUniversity%20Toppers.pdf?alt=media&token=0f839a8d-021a-4946-979a-74fe79351a59">University Rank Holder List</a>
+                             </div>
+                         </div>
+                    </div>  
+                    <h3 class="result_of_se">Result Analysis</h3>
+                    <div class="result_analysis">
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2Fimage%20(2).png?alt=media&token=b4176eea-19c4-4faf-9885-321b81dc1c44" alt="">
+                        </div>
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2F41441552537.png?alt=media&token=c11e2b62-6c07-4bc2-837d-15ea1b318080" alt="">
+                        </div>
+                    </div>
+
+                    <h3 class="result_of_se">SE Information Technology 2022-23</h3>
                     <div class="result_final">
                         <div class="result_asge_card">
                             <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9" height="100px" width="100px"></img>
