--- a/IT_SPECIAL.html
+++ b/IT_SPECIAL.html
@@ -117,12 +117,12 @@
                         <h3 style="margin-top: 0rem;">Youtube channels</h3>
                         <div class="special_u">
                             <img src="vector 3.png" alt="">
-                            <a href="#">Computer Networks: Prof. G M Walunjkar</a>
+                            <a href="https://www.youtube.com/channel/UCuZQQ35w5NFB3DzZEKnSSZw" target="_blank">Computer Networks: Prof. G M Walunjkar</a>
                         </div>
                         <br>
                         <div class="special_u">
                             <img src="vector 3.png" alt="">
-                            <a href="#">Digital Laboratory: Prof Sandeep Samleti</a>
+                            <a href="https://www.youtube.com/channel/UCvPu8zIOy6kl4rfaJ8qA-4Q" target="_blank">Digital Laboratory: Prof Sandeep Samleti</a>
                         </div>
                     </div>
                     <div class="project_more">
@@ -132,7 +132,7 @@
                                 <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                            </div>
                             <div>
-                                <a href="#">Details</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-SPECIAL%20SERVICES%2FHIGH%20PERFORMANCE%20COMPUTING%20FACILITY.pdf?alt=media&token=30744e16-b433-4c11-a617-f5befe1bf9f0">Details</a>
                             </div>
                         </div>
                     </div>
