--- a/MECH_AAC.html
+++ b/MECH_AAC.html
@@ -120,7 +120,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">May, 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2FMOM-AAC-Report%20May%202023.pdf?alt=media&token=2cf82d1d-79bf-43a4-bdbe-3ee384f6c41d">May, 2023</a>
                             </div>
                         </div>
 
@@ -128,7 +128,7 @@
                             <p class="aac_left">2021-22</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Jun, 2022</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2FMOM-AAC-Report%20Jun%202022.pdf?alt=media&token=ca70fe78-7dcf-4a29-9d19-c9266f026930">Jun, 2022</a>
                             </div>
                         </div>
 
@@ -136,7 +136,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Dec, 2020</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2FMOM-AAC-Report%20Dec%202020.pdf?alt=media&token=11cb8cb0-4bbe-4e2d-aaf7-a55298600462">Dec, 2020</a>
                             </div>
                         </div>
 
@@ -144,7 +144,7 @@
                             <p class="aac_left">2019-20</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Oct, 2019</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2FMOM-AAC-Report%20Oct%202019.pdf?alt=media&token=4a20fdf0-c6a3-4899-866c-9385bc120717">Oct, 2019</a>
                             </div>
                         </div>
 
@@ -152,7 +152,7 @@
                             <p class="aac_left">2018-19</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Dec, 2018</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2FMOM-AAC-Report%20Dec%202018.pdf?alt=media&token=5ad6c677-9396-4d4d-8444-b33bec6bc939">Dec, 2018</a>
                             </div>
                         </div>
 
@@ -167,7 +167,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">23 Feb 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2F20230223-DeptMeeting-MOM.pdf?alt=media&token=5eeb3a1f-1796-4d3e-9e63-22daf0d3ba0a">23 Feb 2023</a>
                             </div>
                         </div>
 
@@ -175,7 +175,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">5 Apr 2021</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2F20210405-DeptMeeting-MOM.pdf?alt=media&token=44394864-60d1-4afd-83a6-d651b8bbd29d">5 Apr 2021</a>
                             </div>
                         </div>
 
@@ -183,7 +183,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">22 Apr 2021</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2F20210422-DeptMeeting-MOM.pdf?alt=media&token=4fdff21f-e43c-441a-8812-9c37d68ef1ae">22 Apr 2021</a>
                             </div>
                         </div>
 
@@ -191,7 +191,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">18 May 2021</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-AAC%2F20210518-DeptMeeting-MOM.pdf?alt=media&token=3743eb40-6e7a-4ca7-a720-c0da2a70caf0">18 May 2021</a>
                             </div>
                         </div>
 
