--- a/MECH_PLACEMENT.html
+++ b/MECH_PLACEMENT.html
@@ -109,6 +109,16 @@
             </section>
             <div id="timetable">
                 <h1>Placements</h1>
+
+                <h3 class="result_of_se">Placement Analysis</h3>
+                    <div class="result_analysis" style="margin-bottom: 2rem;">
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FPLACEMENT-GRAPH%2Fimage_2024-02-05_02-45-16.png?alt=media&token=f41460a9-e123-47fb-aaa3-eaf288d74bdc" alt="">
+                        </div>
+                        <div class="result_img">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FPLACEMENT-GRAPH%2Fimage_2024-02-05_02-19-29.png?alt=media&token=0474bf8c-2e6a-4d14-b14c-4585aee0491a" alt="">
+                        </div>
+                    </div>
                 <!-- New Table -->
                 <!-- <br><br> -->
 
