--- a/MECH_RESULT.html
+++ b/MECH_RESULT.html
@@ -111,7 +111,15 @@
 
             <div id="result_asge">
                 <h2 class="result_asge_re" style="margin-bottom: 30px;">Result</h2>
-                
+                <h3 class="result_of_se">Result Analysis</h3>
+                <div class="result_analysis">
+                    <div class="result_img">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-RESULT%2Fimage_2024-02-04_20-08-42.png?alt=media&token=41259e6d-16fc-4675-bca7-3570457116a8" alt="">
+                    </div>
+                    <div class="result_img">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-RESULT%2Fimage_2024-02-04_20-05-35.png?alt=media&token=0de1216a-6a0f-4996-a3b4-16be234e6f03" alt="">
+                    </div>
+                </div>
                 <h3 class="result_of_se">SE Mechanical 2022-23</h3>
                 <div class="rollno" id="secompa">
                     <div class="result_final">
