--- a/MECH_SPECIAL.html
+++ b/MECH_SPECIAL.html
@@ -128,12 +128,12 @@
                         <h3 style="margin-top: 0rem;">Youtube channels</h3>
                         <div class="special_u">
                             <img src="vector 3.png" alt="">
-                            <a href="#">CFD for Engineers : Dr Gaikwad SM</a>
+                            <a href="https://www.youtube.com/channel/UCc-_k5vwPnGSASUk7kD9pDA/videos" target="_blank">CFD for Engineers : Dr Gaikwad SM</a>
                         </div>
                         <br>
                         <div class="special_u">
                             <img src="vector 3.png" alt="">
-                            <a href="#">Easy Engineering Solution : Dr Pritee Purohit</a>
+                            <a href="https://www.youtube.com/channel/UCfElizp_X8HuLBn-_gt76Gw/videos" target="_blank">Easy Engineering Solution : Dr Pritee Purohit</a>
                         </div>
                     </div>
                     <div class="project_more">
@@ -169,7 +169,7 @@
                                     <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                                </div>
                                 <div>
-                                    <a href="#">Cut-Section Model of a Passenger Car</a>
+                                    <a href="https://www.aitpune.com/CarCutSections.aspx">Cut-Section Model of a Passenger Car</a>
                                 </div>
                             </div>
                             <div class="special_u3">
@@ -177,7 +177,7 @@
                                     <img src="vector 2.png" alt="" style="height: 1.2rem; width: 1.2rem;">
                                </div>
                                 <div>
-                                    <a href="#">BMW Twinpower Turbo In-Line 4-Cylinder 2.0 Litre Diesel Engine and 8-Speed Steptronic Automatic Transmission</a>
+                                    <a href="https://www.aitpune.com/BMWCarCutSections.aspx">BMW Twinpower Turbo In-Line 4-Cylinder 2.0 Litre Diesel Engine and 8-Speed Steptronic Automatic Transmission</a>
                                 </div>
                             </div>
                            </div>
