--- a/COMP_PROJECT.html
+++ b/COMP_PROJECT.html
@@ -114,7 +114,7 @@
                 </h1>
                 <p style="margin-top: 30px; margin-bottom: 20px;" class="project_para">Projects Of Computer Department Students</p>
 
-                <div class="project_lists" style="margin-top: 20px;">
+                <!-- <div class="project_lists" style="margin-top: 20px;">
                     <div class="project_img_topic">
                         <div class="project_img">
                             <img src="Rectangle 61.png">
@@ -221,7 +221,7 @@
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-PROJECTS%2FBE%20PROJECT%20LIST%202021-22.pdf?alt=media&token=03069cd5-0987-4282-804b-809ed13234d5" target="_blank">Read More</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div id="RandD" style="margin-top: 2rem; margin-left: 0px;">
                 <h1 style="margin-bottom: 1.4rem;">
