--- a/ENTC_AAC.html
+++ b/ENTC_AAC.html
@@ -122,7 +122,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">May 2023</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_3Mar2023.pdf?alt=media&token=f3779b61-283b-4f69-b33d-167fdee12e92">Mar 2023</a>
                             </div>
                         </div>
 
@@ -130,7 +130,7 @@
                             <p class="aac_left">2022-23</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Aug 2022</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_17Aug2022.pdf?alt=media&token=48ff1292-3147-4515-af2f-5f42155d0700">Aug 2022</a>
                             </div>
                         </div>
 
@@ -138,7 +138,7 @@
                             <p class="aac_left">2021-22</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Jan 2022</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_22Jan2022.pdf?alt=media&token=b229ce10-d937-48bd-acb3-5f53172a2a3d">Jan 2022</a>
                             </div>
                         </div>
 
@@ -146,7 +146,7 @@
                             <p class="aac_left">2021-22</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Aug 2021</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_14th%20August2021.pdf?alt=media&token=33ecd505-972b-41e7-8a00-99039b87aaea">Aug 2021</a>
                             </div>
                         </div>
 
@@ -154,7 +154,7 @@
                             <p class="aac_left">2020-21</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Dec 2020</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_5thDec_2020.pdf?alt=media&token=ff5f87fc-22ff-43ac-9739-18a48f8f3531">Dec 2020</a>
                             </div>
                         </div>
 
@@ -162,7 +162,7 @@
                             <p class="aac_left">2019-20</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Nov 2019</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_8thNov_2019.pdf?alt=media&token=727261f0-298f-41c7-a38a-e9fe0e65e008">Nov 2019</a>
                             </div>
                         </div>
 
@@ -170,7 +170,7 @@
                             <p class="aac_left">2018-19</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Apr 2019</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_Apr2019_18_19_II.pdf?alt=media&token=f446c1ac-35c0-49d4-ae4d-ccaec0871580">Apr 2019</a>
                             </div>
                         </div>
 
@@ -178,7 +178,7 @@
                             <p class="aac_left">2018-19</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Sep 2018</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM__Sept2018_18_19_I.pdf?alt=media&token=6f189e4d-4d6f-43cc-9b0b-e4d0359935af">Sep 2018</a>
                             </div>
                         </div>
 
@@ -186,7 +186,7 @@
                             <p class="aac_left">2017-18</p>
                             <div class="aac_right">
                                 <img src="vector 2.png" alt="">
-                                <a href="#">Mar 2018</a>
+                                <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC-AAC%2FETC_AAC_MOM_Mar2018_17_18.pdf?alt=media&token=4a9ff794-1a56-47b7-b0bc-388cfcb5be75">Mar 2018</a>
                             </div>
                         </div>
 
