--- a/ENTC_FACULTY&STAFF.html
+++ b/ENTC_FACULTY&STAFF.html
@@ -1167,7 +1167,7 @@
                                 </div>
                         
                                 <div class="faculty-name">
-                                    <p>Mr. Nitesh Suryabhan Sukhadeve
+                                    <p>Mr. N S Sukhadeve
                                     </p>
                         
                                 </div>
